# spotpy

./: .coveragerc  .gitignore  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.rst  UnitTest_tmp.csv  eval.npy  mkdocs.yml  pyproject.toml  readthedocs.yml  result.npy  setup.cfg  setup.py
.github/: FUNDING.yml
.github/workflows/: main.yml  python-app.yml
docs/: Advanced_hints.md  Algorithm Guide.md  Algorithm_guide.md  Bayesian_uncertainty_analysis_with_DREAM.md  Calibrating a hydrological model with DREAM.md  Calibration_with_SCE-UA.md  Griewank.md  How_to_link_a_model_to_SPOTPY.md  Hydrological_model.md  Introduction.md  Rosenbrock.md  Sensitivity_analysis_with_FAST.md  getting_started.md  index.md  license.md
docs/Tutorial/: 1-Introduction.md  2-Rosenbrock.md  4-Ackley.md  6-Working with DREAM and Hymod.md  7-Advanced_hints.md
spotpy/: __init__.py  analyser.py  cli.py  database.py  describe.py  indicies.py  likelihood.py  likelihoods.py  objectivefunctions.py  parameter.py  pareto_tools.py  signatures.py  spotpylogging.py
spotpy/algorithms/: __init__.py  _algorithm.py  abc.py  dds.py  demcz.py  dream.py  fast.py  fscabc.py  lhs.py  list.py  list_sampler.py  mc.py  mcmc.py  mle.py  nsgaii.py  nsgaii_dev.py  padds.py  pdds.py  rope.py  sa.py  sceua.py
spotpy/database/: __init__.py  base.py  csv.py  hdf5.py  ram.py  sql.py
spotpy/examples/: 3dplot.py  MyOwnDatabase.txt  NSGA2.csv  NSGAII.py  __init__.py  cli_cmf_lumped.py  cli_hymod.py  dds.py  example_progressbar.py  getting_started.py  gui_cmf_lumped.py  gui_hymod.py  plot_nsgaii_tutorial.py  spot_setup_ackley.py  spot_setup_cmf1d.py  spot_setup_cmf_lumped.py  spot_setup_dds.py  spot_setup_dtlz1.py  spot_setup_griewank.py  spot_setup_hymod.py  spot_setup_hymod_exe.py  spot_setup_hymod_python.py  spot_setup_hymod_python_pareto.py  spot_setup_hymod_unix.py  spot_setup_rosenbrock.py  spot_setup_standardnormal.py  spotpy.conf  tut_padds.py  tutorial_Parameterlist_iterator.py  tutorial_ackley.py  tutorial_cmf_lumped.py  tutorial_dds.py  tutorial_dds_hymod.py  tutorial_dream_hymod.py  tutorial_fast_hymod.py  tutorial_griewank.py  tutorial_indicies.py  tutorial_likelihood.py  tutorial_nsgaii.py  tutorial_nsgaii_dev.py  (+11 more)
spotpy/gui/: mpl.py
tests/: __init__.py  test_algorithms.py  test_analyser.py  test_cli.py  test_database.py  test_dds.py  test_describe.py  test_fast.py  test_gui_mpl.py  test_likelihood.py  test_list_and_constant_parameters_with_samplers.py  test_objectivefunctions.py  test_padds.py  test_parallel.py  test_parameter.py  test_setup_parameters.py  test_signatures.py  testutils.py
tutorials/: 3dplot.py  NSGA2.csv  cli_hymod.py  getting_started.py  gui_hymod.py  plot_nsgaii_tutorial.py  tutorial_Parameterlist_iterator.py  tutorial_ackley.py  tutorial_cmf_lumped.py  tutorial_dds_hymod.py  tutorial_dream_hymod.py  tutorial_efast_hymod.py  tutorial_fast_hymod.py  tutorial_griewank.py  tutorial_likelihood.py  tutorial_listsampler.py  tutorial_nsgaii.py  tutorial_nsgaii_dltz1.py  tutorial_own_database.py  tutorial_padds_hymod.py  tutorial_parallel_computing_hymod.py  tutorial_rosenbrock.py  tutorial_sceua_hymod.py  tutorial_signatures.py
(+5659 files in other folders)
